// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render multiple expenses Summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling
     
    $1.00
  </h1>
</div>
`;

exports[`Should render single expense Summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
     
    $1.00
  </h1>
</div>
`;
